--- a/Module-04/style.css
+++ b/Module-04/style.css
@@ -5,46 +5,30 @@ html{
 *,
 *::before,
 ::after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body{
-    margin: 0px;
-    margin-top: 45px;
-    
+    margin: 0px; 
 }
+.container{
+    width: 1110px;
+    margin: 0 auto;   
+}
+
+
 
 .page-header{
     margin-bottom: 108px;
 }
-
-
-
-
-.clearfix::after{
-    display: table;
-    content: '';
-    clear: both;
-}
-.container{
-    width: 1110px;
-    margin: 0 auto;
-    margin-left: 0;
-    
-    
-    
-}
-
 .site-icon{
     display: inline-block;
 }
-
-
 .site-navigation {
-    width: 465px;
     margin: 0;
     padding: 0;
-    font-size: 12px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
     list-style: none;
     float: right;
 }
@@ -72,72 +56,68 @@ body{
 
 }
 
-
-
-.headline{
-    font-size: 30pt;
-    font-family: 'Roboto-Black', sans-serif;
-    font-weight: bold;
-    color: rgba(81, 81, 81, 255);
-    text-align: center;
+.feature-list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+     
 }
 
-.headline::after{
+.clearfix::after {
+    display: table;
+    content: '';
+    clear: both;
+ }
+
+.feature-list-item{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+
+}
+
+
+
+.first-headline{
+    margin: 0;
+    margin-bottom: 30px;
+    font-size: 32pt;
+    font-family: 'Roboto-Black', sans-serif;
+    font-weight: 700;
+    color: rgba(81, 81, 81, 255);
+    text-align: center;
+    margin-bottom: 133px;
+}
+
+.first-headline::after{
     content: "" ;
     display: block;
     width: 164px;
     height: 7px;
     margin: 0 auto;
+    margin-top: 30px;
     background-color: aqua
     
 }
 
 
-
-img{
-    display: block;
-    max-width: 100%;
-    height: auto;
-    
+.img-link a:hover {
+    color: aqua;
 }
 
-.product-text{
-    display: block;
-    width: 255; height: 40;
-}
-.product-text{
-   
-    background-color: #323232;
-    font-size: 18px;
-    text-transform: uppercase;
-    color: white;
-}
 
-.feature-list{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    
-    
-    
+.product-img{
+    width: 255px;
+    height: 285px;
 }
 
 .product{
-list-style: none;
-    width: 255px;
-    height: 322px;
+    display: block;
+    float: left;
     margin-right: 15px;
     margin-bottom: 32px;
-    padding: 0px;
-    float: left;
-    background-color:#e8effc
-    
+   
 }
-
-
-
-
-
 
 .product:nth-child(4n) {
     margin-right: 0px;
@@ -145,13 +125,87 @@ list-style: none;
 
 
 
+.img-link{
+    display: block;
+    margin: 0 auto;
+    float: left;
+
+}
+
+
+.text-area{
+    margin: 0;
+    display: block;
+    width: 255px; height: 40px;
+    background-color: #323232;
+}
+
+
+.product-text{
+    display: block;
+    margin: 0 ;
+    line-height: 40px;
+    width: 201px; height: 40px;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    color: white;
+    float: left;
+}
+
+
+
+.product-price{
+    display: block;
+    margin: 0;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    width: 54px; height: 40px;
+    line-height: 35px;
+    background-color: #8c8c8c;
+    text-align: center;
+    float: right;
+    
+}
+
+.second-headline{   
+     margin: 0;
+    font-size: 30pt;
+    font-family: 'Roboto-Black', sans-serif;
+    font-weight: 700;
+    color: rgba(81, 81, 81, 255);
+    text-align: center;
+    margin-bottom: 133px;
+    margin-top: 105px;
+
+}
+
+.second-headline::after{
+    content: "" ;
+    display: block;
+    width: 164px;
+    height: 7px;
+    margin: 0 auto;
+    margin-top: 30px;
+    background-color:#4ec6ab
+    
+}
+
+.clearfix::after {
+    display: table;
+    content: '';
+    clear: both;
+ }
 
 .second-list-item{
     list-style: none;
     margin: 0;
     padding: 0;
-}
+    font-size: 14;
 
+
+}
 
 .interesting-news{
     display: block;
@@ -161,38 +215,77 @@ list-style: none;
 }
 
 .news-contant{
-        list-style: none;
-            width: 350px;
-            height: auto;
-            margin-right: 15px;
-            margin-bottom: 32px;
-            padding: 0px;
-            float: left;
-            
-            
-        }
+    list-style: none;
+    width: 350px;
+    height: auto;
+    margin-right: 15px;
+    margin-bottom: 32px;
+    padding: 0px;
+    float: left;   
+}
+
+.news-list::after{
+    content: "" ;
+    display: block;
+    width: 136px;
+    height: 3px;
+    margin-top: 14px;
+    background-color:#4ec6ab
+    
+    
+}
+
+        
+        
+.news-list{
+    margin: 0;
+    margin-top: 18px;
+    font-size: 18;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    color: rgba(85, 82, 82, 255);
+    text-align: left;
+    
+}
+
+.news-list-item{
+   margin: 0;
+   margin-top: 30px;
+   margin-bottom: 19px;
+   color: rgba(85, 82, 82, 255);
+   font-size: 14;
+}
         
         
         
-        
-        
-        
-        .news-contant-:nth-child(3n) {
-            margin-right: 0px;
-        }
+.news-contant-:nth-child(3n) {
+    margin-right: 0px;
+}
 
 
-        .read-more{
-            display: block;
-            width: 159px;
-            height: 51px;
-            font-size: 16px;
-            color: #f6fbfa;
-            border: 1px solid #4ec6ab;
-            background-color:#4ec6ab;
-           cursor: pointer;
-           text-align: center;
-
-           margin: 0 auto;
+.read-more{
+    display: block;
+    width: 159px;
+    height: 51px;
+    float: left;
+    font-size: 16px;
+    line-height: 45px;
+    color: #f6fbfa;
+    border: 1px solid #4ec6ab;
+    background-color:#4ec6ab;
+    cursor: pointer;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 40px;
             
-        }
+}
+
+
+
+
+
+
+
+
+
+
