--- a/Module-04/style.css
+++ b/Module-04/style.css
@@ -4,12 +4,15 @@ html{
 
 *,
 *::before,
-::after {
+*::after {
     box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 
 body{
     margin: 0px; 
+    padding: 40px;
 }
 .container{
     width: 1110px;
@@ -100,10 +103,10 @@ body{
     
 }
 
+ 
 
-.img-link a:hover {
-    color: aqua;
-}
+
+
 
 
 .product-img{
@@ -114,16 +117,25 @@ body{
 .product{
     display: block;
     float: left;
-    margin-right: 15px;
+    margin-right: 30px;
     margin-bottom: 32px;
    
+}
+
+
+.product:nth-last-child(-n + 4){
+    margin-bottom: 0;
 }
 
 .product:nth-child(4n) {
     margin-right: 0px;
 }
 
-
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    }
 
 .img-link{
     display: block;
@@ -177,7 +189,7 @@ body{
     color: rgba(81, 81, 81, 255);
     text-align: center;
     margin-bottom: 133px;
-    margin-top: 105px;
+    padding-top:  105px;
 
 }
 
@@ -218,7 +230,7 @@ body{
     list-style: none;
     width: 350px;
     height: auto;
-    margin-right: 15px;
+    margin-right: 30px;
     margin-bottom: 32px;
     padding: 0px;
     float: left;   
@@ -239,7 +251,7 @@ body{
         
 .news-list{
     margin: 0;
-    margin-top: 18px;
+    padding-top: 18px;
     font-size: 18;
     font-family: 'Open Sans', sans-serif;
     font-weight: 600;
@@ -249,8 +261,8 @@ body{
 }
 
 .news-list-item{
+   padding-top: 30px;
    margin: 0;
-   margin-top: 30px;
    margin-bottom: 19px;
    color: rgba(85, 82, 82, 255);
    font-size: 14;
@@ -258,7 +270,7 @@ body{
         
         
         
-.news-contant-:nth-child(3n) {
+.news-contant:nth-child(3n) {
     margin-right: 0px;
 }
 
@@ -276,7 +288,7 @@ body{
     cursor: pointer;
     text-align: center;
     margin: 0 auto;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
             
 }
 
