--- a/Module-09/css/media.css
+++ b/Module-09/css/media.css
@@ -1,11 +1,13 @@
 @media (min-width:768px){
+    .header .row:first-of-type {
+        margin-bottom: 5rem;
+    }
+
     .menu-container {
         flex-flow: row wrap;
         justify-content: space-between;
         align-items: center;
     }
-
-
 
     .logo-container{
         margin: 0;
@@ -65,7 +67,7 @@ width: 40%
 }
 
 
-@media (min-width:960px){
+@media (min-width:1440px){
 .container{
     padding: 0;
 }
