--- a/Module-09/css/media.css
+++ b/Module-09/css/media.css
@@ -1,6 +1,8 @@
+
+
 @media (min-width:768px){
     .header .row:first-of-type {
-        margin-bottom: 5rem;
+        margin-bottom: 9rem;
     }
 
     .menu-container {
@@ -33,11 +35,21 @@
         color: white;
         font-family: 'Montserrat', sans-serif;
         font-weight: 700;
-        margin-bottom: 40px;
+    
     }
 
     .top-content-text{
+        display: block;
+        font-size: 24px;
+        width: 100%;
         margin-bottom: 32px;
+    }
+    .top-content-btn{
+        width: 226px;
+        height: 40px;
+    }
+    .second-section{
+        padding-bottom: 40px;
     }
     
 .team-list{
@@ -48,15 +60,20 @@
 }
 
 .list-item{
-width: 40%
+    margin-bottom: 60px;
+    width: 40%
+}
+.list-item:nth-last-child(-n+2){
+    margin-bottom: 40px;
 }
 
+
 .second-headline{
-    margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 40px;
 }
-.text-description{
-    margin-bottom: 60px;
-}
+
+
 .button-bot{
     display: block;
     width: 193px;
@@ -67,36 +84,47 @@ width: 40%
 }
 
 
-@media (min-width:1440px){
-.container{
-    padding: 0;
-}
-.menu-container{
-    margin-bottom: 145px;
-}
-.top-content-title{
-    padding: 0;
-    margin-bottom: 30px;
-}
-    .top-content-text{
-        width: 397px;
-        font-size: 24px;
+@media (min-width: 992px){
+
+    .container--width {
+        max-width: 960px;
     }
 
-.top-content-btn{
-    width: 225px;
-    height: 40px;
-}
+    .container{
+        padding: 0;
+    }
+    .menu-container{
+        margin-bottom: 145px;
+    }
+    .top-content-title{
+        padding: 0;
+        margin-bottom: 30px;
+    }
+        .top-content-text{
+           
+            font-size: 24px;
+        }
 
-.team-list{
-    display: flex;
-    flex-wrap: nowrap;
-    flex-basis: 220px;
-    justify-content: space-between;
-}
-.button-bot{
-    display: block;
-    width: 192px;
-    height: 40px;
+    .top-content-btn{
+        width: 225px;
+        height: 40px;
+    }
+    .list-item{
+        margin: 0;
+    }
+
+    .team-list{
+        display: flex;
+        flex-wrap: wrap;
+        flex-basis: 220px;
+        margin-bottom: 45px;
+        justify-content: space-between;
+    }
+    .button-bot{
+        display: block;
+        width: 192px;
+        height: 40px;
+
+    }
 
 }
